--- a/debian/rules
+++ b/debian/rules
@@ -10,9 +10,6 @@
 #export DH_VERBOSE=1
 
 
-
-
-
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
@@ -36,22 +33,13 @@ clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp configure-stamp
-
 	# Add here commands to clean up after the build process.
 	#$(MAKE) clean
-
 	dh_clean 
 
 install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
-	# Add here commands to install the package into debian/fadecut.
-	#$(MAKE) DESTDIR=$(CURDIR)/debian/fadecut install
+	# install nececary files 
 	cp fadecut $(CURDIR)/debian/fadecut/usr/bin
-	rmdir $(CURDIR)/debian/fadecut/usr/sbin
 	dh_installman ./fadecut.1
 
 # Build architecture-independent files here.
