--- a/debian/control
+++ b/debian/control
@@ -11,9 +11,9 @@ Architecture: all
 Depends: vorbis-tools, sox, streamripper, mp3info,  libc-bin, mp3splt (>=2.2.5)
 Suggests: lame
 Description: Radio livestream to ogg/mp3 tool
- This script handle mp3 files (-ripped by streamripper), fade in and
- out. It set stream tags: artist, title and your own decided genre.
- If you have songs you do not like, move the ripped file to dontlike/ folder,
+ This script handles mp3 files (-ripped by streamripper), fades them in and
+ out. It sets stream tags: artist, title and your own decided genre.
+ If you have songs you do not like, move the ripped file to the dontlike/ folder,
  so fadecut will no longer convert this song, if it was read on the livestream.
  All processed files of fadecut are in new/ folder. The original files from
  streamripper are in the orig/ folder after processing.
