--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: sound
 Priority: optional
 Maintainer: Marco Balmer <marco@balmer.name>
 Build-Depends: debhelper (>= 7)
-Standards-Version: 3.7.3
+Standards-Version: 3.9.1
 Homepage: http://github.com/micressor/fadecut
 
 Package: fadecut
 Architecture: all
-Depends: vorbis-tools, sox, libsox-fmt-mp3, streamripper, mp3info,  libc-bin, mp3splt
+Depends: vorbis-tools, sox, libsox-fmt-mp3, streamripper, mp3info, mp3splt
 Suggests: lame
 Description: Radio livestream to ogg/mp3 tool
  This script handle mp3 files (-ripped by streamripper), fade in and
