--- a/debian/rules
+++ b/debian/rules
@@ -1,85 +1,77 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
+# Sample debian/rules that uses debhelper. 
+# This file is public domain software, originally written by Joey Hess.
+#
+# This version is for packages that are architecture independent.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-
-
-
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	# Add here commands to configure the package.
-
-	touch configure-stamp
-
-
 build: build-stamp
-
-build-stamp: configure-stamp  
+build-stamp:
 	dh_testdir
 
 	# Add here commands to compile the package.
 	#$(MAKE)
-	#docbook-to-man debian/fadecut.sgml > fadecut.1
 
-	touch $@
+	touch build-stamp
 
-clean: 
+clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp configure-stamp
+	rm -f build-stamp
+
 	# Add here commands to clean up after the build process.
 	#$(MAKE) clean
-	dh_clean 
+	#$(MAKE) distclean
+
+	dh_clean
 
 install: build
+	dh_testdir
+	dh_testroot
+	dh_prep
+	dh_installdirs
 	# dh_install check file debian/fadecut.install
-	dh_install
-	dh_installman ./fadecut.1
-	dh_installexamples ./examples/*
+        dh_install
+        dh_installman ./fadecut.1
+        dh_installexamples ./examples/*
 
 # Build architecture-independent files here.
 binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs 
+	dh_installchangelogs
 	dh_installdocs
 	dh_installexamples
-#	dh_install
 #	dh_installmenu
-#	dh_installdebconf	
+#	dh_installdebconf
 #	dh_installlogrotate
 #	dh_installemacsen
+#	dh_installcatalogs
 #	dh_installpam
 #	dh_installmime
-#	dh_python
 #	dh_installinit
 #	dh_installcron
 #	dh_installinfo
+#	dh_installwm
+#	dh_installudev
+#	dh_lintian
+#	dh_bugfiles
+#	dh_undocumented
 	dh_installman
 	dh_link
-	dh_strip
 	dh_compress
 	dh_fixperms
 #	dh_perl
-#	dh_makeshlibs
 	dh_installdeb
-	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
 
+# Build architecture-dependent files here.
+binary-arch: build install
+# We have nothing to do by default.
+
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+.PHONY: build clean binary-indep binary-arch binary install
