--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: http://github.com/micressor/fadecut
 
 Package: fadecut
 Architecture: all
-Depends: ${misc:Depends}, vorbis-tools, sox, libsox-fmt-mp3, streamripper, mp3info, mp3splt
+Depends: ${misc:Depends}, vorbis-tools, sox, libsox-fmt-mp3, streamripper, mp3info, mp3splt,bash (>=3.2-4)
 Suggests: lame
 Description: Radio livestream to ogg/mp3 tool
  This script handle mp3 files (-ripped by streamripper), fade in and
