--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Marco Balmer <marco@balmer.name>
 Build-Depends: debhelper (>= 7)
 Standards-Version: 3.9.1
 Homepage: http://github.com/micressor/fadecut
+Vcs-Git: git://github.com/micressor/fadecut.git
 
 Package: fadecut
 Architecture: all
