--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 7)
 Standards-Version: 3.9.1
 Homepage: http://github.com/micressor/fadecut
 Vcs-Git: git://github.com/micressor/fadecut.git
+Vcs-Browser: http://github.com/micressor/fadecut
 
 Package: fadecut
 Architecture: all
