--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: fadecut
 Section: sound
 Priority: extra
 Maintainer: Marco Balmer <marco@balmer.name>
-Build-Depends: debhelper (>= 9), vorbis-tools, opus-tools, lame, sox, libsox-fmt-mp3, streamripper, id3v2, pandoc (>=1.12), gzip
+Build-Depends: debhelper (>= 9), vorbis-tools, opus-tools, lame, sox, libsox-fmt-mp3, streamripper, id3v2, pandoc (>=1.12), gzip (>=1.6)
 Standards-Version: 3.9.6
 Homepage: http://github.com/micressor/fadecut
 Vcs-Git: git://github.com/micressor/fadecut.git
