--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,9 @@ Priority: extra
 Maintainer: Marco Balmer <marco@balmer.name>
 Build-Depends: debhelper (>= 9), vorbis-tools, opus-tools, lame, sox, libsox-fmt-mp3, streamripper, id3v2, pandoc (>=1.12), gzip (>=1.6)
 Standards-Version: 3.9.6
-Homepage: http://github.com/micressor/fadecut
-Vcs-Git: git://github.com/micressor/fadecut.git
-Vcs-Browser: https://github.com/micressor/fadecut/tree/debian
+Homepage: http://github.com/fadecut/fadecut
+Vcs-Git: https://github.com/fadecut/fadecut.git
+Vcs-Browser: https://github.com/fadecut/fadecut/tree/debian
 
 Package: fadecut
 Architecture: all
