--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,32 @@
 Source: fadecut
+Maintainer: Marco Balmer <marco@balmer.name>
 Section: sound
 Priority: extra
-Maintainer: Marco Balmer <marco@balmer.name>
-Build-Depends: debhelper (>= 10), vorbis-tools, opus-tools, lame, sox, libsox-fmt-mp3, streamripper, id3v2, pandoc (>=1.12), gzip (>=1.6), mediainfo (>=0.7.80)
+Build-Depends: debhelper (>= 10),
+               vorbis-tools,
+               opus-tools,
+               lame,
+               sox,
+               libsox-fmt-mp3,
+               streamripper,
+               id3v2,
+               pandoc (>= 1.12),
+               gzip (>= 1.6),
+               mediainfo (>= 0.7.80)
 Standards-Version: 3.9.8
-Homepage: http://github.com/fadecut/fadecut
-Vcs-Git: https://github.com/fadecut/fadecut.git
 Vcs-Browser: https://github.com/fadecut/fadecut/tree/debian
+Vcs-Git: https://github.com/fadecut/fadecut.git
+Homepage: http://github.com/fadecut/fadecut
 
 Package: fadecut
 Architecture: all
-Depends: ${misc:Depends}, opus-tools, vorbis-tools|lame, sox, libsox-fmt-mp3, streamripper, bash (>=3.2-4), id3v2, mediainfo (>=0.7.80)
+Depends: ${misc:Depends},
+         sox,
+         opus-tools,
+         libsox-fmt-mp3,
+         streamripper,
+         id3v2,
+         mediainfo (>= 0.7.80)
 Description: toolset to rip audiostreams, cut, fade in/out and tag the resulting audiofiles
  fadecut is a script to rip audio files from a livestream and to process them
  automatically. Beginning and ending fo the audio files will be cut and faded
